# acquiesce

./: .gitignore  Cargo.toml  package.json
bindings/node/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/: acquiesce.pyi
bindings/python/src/: lib.rs  stub_gen.rs
src/: configs.rs  json.rs  lib.rs  parse.rs  render.rs  utils.rs
src/configs/: kimik2.rs
src/parse/: literal.rs  partial_json.rs
src/render/: gbnf.rs  json.rs  lark.rs  schema.rs  template.rs
src/render/python/: json_schema_to_gbnf.py
src/utils/: partial_json.rs  partial_literal.rs
tests/: messages.jsonl  render.rs
