[workspace]
members = [
    ".",
    "bindings/node",
    "bindings/python",
]
default-members = ["."]

[package]
name = "acquiesce"
version = "0.1.0"
edition = "2024"
authors = ["Jason Wiemels <jason@together.ai>"]

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
hf-hub = "0.4"

[dependencies]
minijinja = { version = "2.11", features = ["unicode", "loop_controls"] }
minijinja-contrib = { version = "2.11", features = ["pycompat"] }
openai-harmony = "0.0"
jsonschema = "0.33"
regex = "1.11"
llguidance = "1.2"
pyo3 = "0.26"
pyo3-ffi = "0.26"

serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }

chrono = "0.4"
indexmap = "2.11"
futures = "0.3"
thiserror = "2.0"

[profile.release]
opt-level = 3
debug = false
strip = true
