
[package]
authors = ["Jason Wiemels <jason@together.ai>"]
edition = "2021"
name = "acquiesce-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
acquiesce = { path = "../../." }
napi = "3"
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
