[package]
name = "acquiesce-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "acquiesce_py"
crate-type = ["cdylib"]

[dependencies]
acquiesce = { path = "../../" }
pyo3 = { version = "0.26", features = ["extension-module"] }

serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
